# sanzi-assistant

./: .env.example  .gitignore  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  chat.py  health.py  qa.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py
backend/app/services/: __init__.py  knowledge_base.py  llm_service.py
backend/data/: knowledge_base.json
backend/scripts/: __init__.py  export_openapi.py
backend/tests/: test_api.py  test_logging.py  test_stream.py
docs/: ARCHITECTURE.md  GIT_WORKFLOW.md  TASK_SPLIT.md  openapi.json
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatPanel.tsx  ErrorBoundary.tsx  Header.tsx  SourcePanel.tsx
frontend/src/hooks/: useChat.ts
frontend/src/styles/: global.css
frontend/src/types/: api.d.ts
